--- a/Lab 03/Lab 03.csproj
+++ b/Lab 03/Lab 03.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{43196223-6222-4E54-B4E2-672C27E8A811}</ProjectGuid>
+    <ProjectGuid>{20F7C738-49E7-40E5-9626-1B2B4BE097BB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CPI311.Labs</RootNamespace>
-    <AssemblyName>Lab 01</AssemblyName>
+    <RootNamespace>Lab_03</RootNamespace>
+    <AssemblyName>Lab 03</AssemblyName>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -35,8 +35,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Fraction.cs" />
-    <Compile Include="Lab01.cs" />
+    <Compile Include="Lab03.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -59,7 +58,12 @@
     </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Game Engine\Game Engine.csproj">
+      <Project>{7f695acb-f6d5-4918-a893-78bc81257536}</Project>
+      <Name>Game Engine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
