--- a/Lab 02/Lab 02.csproj
+++ b/Lab 02/Lab 02.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Lab02.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpiralMover.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
