--- a/Game Engine/Game Engine.csproj
+++ b/Game Engine/Game Engine.csproj
@@ -39,9 +39,15 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BoxCollider.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Collider.cs" />
+    <Compile Include="Component.cs" />
     <Compile Include="InputManager.cs" />
+    <Compile Include="IUpdateable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rigidbody.cs" />
+    <Compile Include="SphereCollider.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="Transform.cs" />
