--- a/Game Engine/Game Engine.csproj
+++ b/Game Engine/Game Engine.csproj
@@ -45,10 +45,17 @@
     <Compile Include="Component.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="IUpdateable.cs" />
+    <Compile Include="Light.cs" />
+    <Compile Include="Material.cs" />
+    <Compile Include="ModelRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderer.cs" />
     <Compile Include="Rigidbody.cs" />
+    <Compile Include="ScreenManager.cs" />
+    <Compile Include="SimpleMaterial.cs" />
     <Compile Include="SphereCollider.cs" />
     <Compile Include="Sprite.cs" />
+    <Compile Include="TerrainRenderer.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
