git-svn-id: http://cpi311-fall2014.googlecode.com/svn/trunk@34 ba4156f4-caf2-72f1-87dd-37b8f1b46382

--- a/Game Engine/Game Engine.csproj
+++ b/Game Engine/Game Engine.csproj
@@ -39,6 +39,8 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AStarNode.cs" />
+    <Compile Include="AStarSearch.cs" />
     <Compile Include="BoxCollider.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Collider.cs" />
