--- a/Game Engine/Game Engine.csproj
+++ b/Game Engine/Game Engine.csproj
@@ -39,26 +39,26 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AStarNode.cs" />
-    <Compile Include="AStarSearch.cs" />
-    <Compile Include="BoxCollider.cs" />
+    <Compile Include="AI\AStarNode.cs" />
+    <Compile Include="AI\AStarSearch.cs" />
+    <Compile Include="Physics\BoxCollider.cs" />
     <Compile Include="Camera.cs" />
-    <Compile Include="Collider.cs" />
+    <Compile Include="Physics\Collider.cs" />
     <Compile Include="Component.cs" />
-    <Compile Include="InputManager.cs" />
+    <Compile Include="Managers\InputManager.cs" />
     <Compile Include="IUpdateable.cs" />
-    <Compile Include="Light.cs" />
-    <Compile Include="Material.cs" />
-    <Compile Include="ModelRenderer.cs" />
+    <Compile Include="Rendering\Light.cs" />
+    <Compile Include="Rendering\Material.cs" />
+    <Compile Include="Rendering\ModelRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Renderer.cs" />
-    <Compile Include="Rigidbody.cs" />
-    <Compile Include="ScreenManager.cs" />
-    <Compile Include="SimpleMaterial.cs" />
-    <Compile Include="SphereCollider.cs" />
-    <Compile Include="Sprite.cs" />
-    <Compile Include="TerrainRenderer.cs" />
-    <Compile Include="Time.cs" />
+    <Compile Include="Rendering\Renderer.cs" />
+    <Compile Include="Physics\Rigidbody.cs" />
+    <Compile Include="Managers\ScreenManager.cs" />
+    <Compile Include="Rendering\SimpleMaterial.cs" />
+    <Compile Include="Physics\SphereCollider.cs" />
+    <Compile Include="Rendering\Sprite.cs" />
+    <Compile Include="Rendering\TerrainRenderer.cs" />
+    <Compile Include="Managers\Time.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
   <ItemGroup>
