--- a/Game Engine/Game Engine.csproj
+++ b/Game Engine/Game Engine.csproj
@@ -41,12 +41,15 @@
   <ItemGroup>
     <Compile Include="AI\AStarNode.cs" />
     <Compile Include="AI\AStarSearch.cs" />
+    <Compile Include="Drawing\AnimatedSprite.cs" />
+    <Compile Include="Drawing\ProgressBar.cs" />
+    <Compile Include="GameObject.cs" />
     <Compile Include="Physics\BoxCollider.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Physics\Collider.cs" />
     <Compile Include="Component.cs" />
     <Compile Include="Managers\InputManager.cs" />
-    <Compile Include="IUpdateable.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Rendering\Light.cs" />
     <Compile Include="Rendering\Material.cs" />
     <Compile Include="Rendering\ModelRenderer.cs" />
@@ -56,7 +59,7 @@
     <Compile Include="Managers\ScreenManager.cs" />
     <Compile Include="Rendering\SimpleMaterial.cs" />
     <Compile Include="Physics\SphereCollider.cs" />
-    <Compile Include="Rendering\Sprite.cs" />
+    <Compile Include="Drawing\Sprite.cs" />
     <Compile Include="Rendering\TerrainRenderer.cs" />
     <Compile Include="Managers\Time.cs" />
     <Compile Include="Transform.cs" />
