git-svn-id: http://cpi311-fall2014.googlecode.com/svn/trunk@40 ba4156f4-caf2-72f1-87dd-37b8f1b46382

--- a/Game Engine/Game Engine.csproj
+++ b/Game Engine/Game Engine.csproj
@@ -41,9 +41,12 @@
   <ItemGroup>
     <Compile Include="AI\AStarNode.cs" />
     <Compile Include="AI\AStarSearch.cs" />
+    <Compile Include="Animation\AnimationPlayer.cs" />
+    <Compile Include="Animation\AnimationClip.cs" />
     <Compile Include="Drawing\AnimatedSprite.cs" />
     <Compile Include="Drawing\ProgressBar.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="Animation\Keyframe.cs" />
     <Compile Include="Physics\BoxCollider.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Physics\Collider.cs" />
@@ -62,6 +65,7 @@
     <Compile Include="Drawing\Sprite.cs" />
     <Compile Include="Rendering\TerrainRenderer.cs" />
     <Compile Include="Managers\Time.cs" />
+    <Compile Include="Animation\SkinningData.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
   <ItemGroup>
