--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{7F695ACB-F6D5-4918-A893-78BC81257536}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{53578056-8658-48BB-BD88-BFEE4F60A9B0}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CPI311.GameEngine</RootNamespace>
-    <AssemblyName>Game Engine</AssemblyName>
+    <RootNamespace>Examples</RootNamespace>
+    <AssemblyName>Examples</AssemblyName>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Build\</OutputPath>
+    <OutputPath>bin\WindowsGL\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,59 +26,50 @@
     <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Build\</OutputPath>
+    <OutputPath>bin\WindowsGL\Release\</OutputPath>
     <DefineConstants>TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AI\AStarNode.cs" />
-    <Compile Include="AI\AStarSearch.cs" />
-    <Compile Include="Animation\AnimationPlayer.cs" />
-    <Compile Include="Animation\AnimationClip.cs" />
-    <Compile Include="Button.cs" />
-    <Compile Include="CheckBox.cs" />
-    <Compile Include="Drawing\AnimatedSprite.cs" />
-    <Compile Include="Drawing\ProgressBar.cs" />
-    <Compile Include="GameObject.cs" />
-    <Compile Include="Animation\Keyframe.cs" />
-    <Compile Include="GUIElement.cs" />
-    <Compile Include="GUIGroup.cs" />
-    <Compile Include="Physics\BoxCollider.cs" />
-    <Compile Include="Camera.cs" />
-    <Compile Include="Physics\Collider.cs" />
-    <Compile Include="Component.cs" />
-    <Compile Include="Managers\InputManager.cs" />
-    <Compile Include="Interfaces.cs" />
-    <Compile Include="Rendering\Light.cs" />
-    <Compile Include="Rendering\Material.cs" />
-    <Compile Include="Rendering\ModelRenderer.cs" />
+    <Compile Include="Game1.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rendering\Renderer.cs" />
-    <Compile Include="Physics\Rigidbody.cs" />
-    <Compile Include="Managers\ScreenManager.cs" />
-    <Compile Include="Rendering\SimpleMaterial.cs" />
-    <Compile Include="Physics\SphereCollider.cs" />
-    <Compile Include="Drawing\Sprite.cs" />
-    <Compile Include="Rendering\TerrainRenderer.cs" />
-    <Compile Include="Managers\Time.cs" />
-    <Compile Include="Animation\SkinningData.cs" />
-    <Compile Include="Transform.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="OpenTK">
+      <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\OpenTK.dll</HintPath>
+    </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="Lidgren.Network">
+      <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\Lidgren.Network.dll</HintPath>
+    </Reference>
+    <Reference Include="Tao.Sdl">
+      <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\Tao.Sdl.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="C:\Program Files %28x86%29\MonoGame\v3.0\Assemblies\WindowsGL\SDL.dll">
+      <Link>SDL.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Game Engine\Game Engine.csproj">
+      <Project>{7f695acb-f6d5-4918-a893-78bc81257536}</Project>
+      <Name>Game Engine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
