git-svn-id: http://cpi311-fall2014.googlecode.com/svn/trunk@43 ba4156f4-caf2-72f1-87dd-37b8f1b46382

--- a/Game Engine/Game Engine.csproj
+++ b/Game Engine/Game Engine.csproj
@@ -43,14 +43,15 @@
     <Compile Include="AI\AStarSearch.cs" />
     <Compile Include="Animation\AnimationPlayer.cs" />
     <Compile Include="Animation\AnimationClip.cs" />
-    <Compile Include="Button.cs" />
-    <Compile Include="CheckBox.cs" />
+    <Compile Include="GameEngine.cs" />
+    <Compile Include="GUI\Button.cs" />
+    <Compile Include="GUI\CheckBox.cs" />
     <Compile Include="Drawing\AnimatedSprite.cs" />
     <Compile Include="Drawing\ProgressBar.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Animation\Keyframe.cs" />
-    <Compile Include="GUIElement.cs" />
-    <Compile Include="GUIGroup.cs" />
+    <Compile Include="GUI\GUIElement.cs" />
+    <Compile Include="GUI\GUIGroup.cs" />
     <Compile Include="Physics\BoxCollider.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Physics\Collider.cs" />
