--- a/Game Engine/Game Engine.csproj
+++ b/Game Engine/Game Engine.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Rendering\Material.cs" />
     <Compile Include="Rendering\ModelRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rendering\PointMaterial.cs" />
     <Compile Include="Rendering\Renderer.cs" />
     <Compile Include="Physics\Rigidbody.cs" />
     <Compile Include="Managers\ScreenManager.cs" />
